# hcephes

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  GITHUB_URL  LICENSE  LICENSE.txt  NAME  README.md  README.rst  appveyor.yml  hcephes-config.cmake.in  install  install.bat
hcephes/: CMakeLists.txt  mtherr.c
hcephes/bessel/: airy.c  hyp2f1.c  hyperg.c  i0.c  i1.c  iv.c  j0.c  j1.c  jn.c  jv.c  k0.c  k1.c  kn.c  struve.c  yn.c
hcephes/cmath/: cbrt.c  powi.c
hcephes/cprob/: bdtr.c  btdtr.c  chdtr.c  drand.c  expx2.c  fdtr.c  gamma.c  gdtr.c  igam.c  igami.c  incbet.c  incbi.c  kolmogorov.c  nbdtr.c  ndtr.c  ndtri.c  pdtr.c  stdtr.c  unity.c
hcephes/ellf/: cmplx.c  ellie.c  ellik.c  ellpe.c  ellpj.c  ellpk.c
hcephes/misc/: beta.c  chbevl.c  dawsn.c  ei.c  expn.c  fac.c  fresnl.c  planck.c  polylog.c  psi.c  revers.c  rgamma.c  shichi.c  sici.c  simpsn.c  spence.c  zeta.c  zetac.c
hcephes/polyn/: euclid.c  polevl.c  polmisc.c  polrt.c  polyn.c
include/: CMakeLists.txt  cprob.h  hcephes.h
include/hcephes/: hcephes.h
include/ncephes/: cprob.h  ellf.h  misc.h  ncephes.h  polyn.h  type.h
ncephes/: const.c  cprob_export.txt  cprob_ffcall.c  ellf_export.txt  ellf_ffcall.c  mconf.h  mconf.patch  misc_export.txt  misc_ffcall.c  mtherr.c  polevl.h  polyn_ffcall.c
ncephes/bessel/: airy.c  hyp2f1.c  hyperg.c  i0.c  i1.c  iv.c  j0.c  j1.c  jn.c  jv.c  k0.c  k1.c  kn.c  psi.c  struve.c  yn.c
ncephes/cmath/: acosh.c  asin.c  asinh.c  atanh.c  cbrt.c  clog.c  cmplx.c  cosh.c  drand.c  dtestvec.c  exp10.c  exp2.c  fabs.c  floor.c  isnan.c  log.c  log10.c  log2.c  mod2pi.c  mtst.c  pow.c  powi.c  protos.h  round.c  setprec.c  sin.c  sincos.c  sindg.c  sinh.c  sqrt.c  tan.c  tandg.c  tanh.c  unity.c
ncephes/cprob/: bdtr.c  btdtr.c  chdtr.c  drand.c  expx2.c  fdtr.c  gamma.c  gdtr.c  igam.c  igami.c  incbet.c  incbi.c  kolmogorov.c  nbdtr.c  ndtr.c  ndtri.c  pdtr.c  polevl.c  stdtr.c  unity.c
ncephes/ellf/: cmplx.c  ellf.c  ellie.c  ellik.c  ellpe.c  ellpj.c  ellpk.c  polevl.c  protos.h
ncephes/misc/: beta.c  beta.c.orig  chbevl.c  dawsn.c  ei.c  expn.c  fac.c  fresnl.c  mconf.h  planck.c  polevl.c  polylog.c  psi.c  revers.c  rgamma.c  shichi.c  sici.c  simpsn.c  spence.c  zeta.c  zetac.c
ncephes/polyn/: euclid.c  polevl.c  polmisc.c  polrt.c  polyn.c  revers.c
src/: CMakeLists.txt  mtherr.c
src/bessel/: airy.c  hyp2f1.c  hyperg.c  i0.c  i1.c  iv.c  j0.c  j1.c  jn.c  jv.c  k0.c  k1.c  kn.c  struve.c  yn.c
src/cmath/: cbrt.c  powi.c
src/cprob/: bdtr.c  btdtr.c  chdtr.c  drand.c  expx2.c  fdtr.c  gamma.c  gdtr.c  igam.c  igami.c  incbet.c  incbi.c  kolmogorov.c  nbdtr.c  ndtr.c  ndtri.c  pdtr.c  stdtr.c  unity.c
src/ellf/: cmplx.c  ellie.c  ellik.c  ellpe.c  ellpj.c  ellpk.c
src/misc/: beta.c  chbevl.c  dawsn.c  ei.c  expn.c  fac.c  fresnl.c  planck.c  polylog.c  psi.c  revers.c  rgamma.c  shichi.c  sici.c  simpsn.c  spence.c  zeta.c  zetac.c
src/polyn/: euclid.c  polevl.c  polmisc.c  polrt.c  polyn.c
test/: CMakeLists.txt  test_hcephes.c  test_ncephes.c
